--- a/index.html
+++ b/index.html
@@ -104,18 +104,18 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                     aria-expanded="true" aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
-                    <span>Minha Carteira</span>
+                    <span>Minha Carteira Open Finance</span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="login.html">Login</a>
-                        <a class="collapse-item" href="register.html">Register</a>
-                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
+                        <h6 class="collapse-header">Instituições</h6>
+                        <a class="collapse-item" href="login.html">BRB</a>
+                        <a class="collapse-item" href="register.html">Banco do Brasil</a>
+                        <a class="collapse-item" href="forgot-password.html">Nubank</a>
                         <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="404.html">404 Page</a>
-                        <a class="collapse-item" href="blank.html">Blank Page</a>
+                        <!--<h6 class="collapse-header">Other Pages:</h6>-->
+                        <a class="collapse-item" href="404.html">Itaú</a>
+                        
                     </div>
                 </div>
             </li>
