--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Pagina de Investimentos</title>
+    <title>Pagina de Investimento</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -104,7 +104,7 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                     aria-expanded="true" aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
-                    <span>Minha Carteira Open Finance</span>
+                    <span>Minha Carteira Open Finance </span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
@@ -115,7 +115,7 @@
                         <div class="collapse-divider"></div>
                         <!--<h6 class="collapse-header">Other Pages:</h6>-->
                         <a class="collapse-item" href="404.html">Itaú</a>
-                        
+
                     </div>
                 </div>
             </li>
