--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Meus Rendimentos</span></a>
             </li>
