--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Tabelas</span></a>
+                    <span>Planilha Extratos</span></a>
             </li>
 
             <!-- Divider -->
@@ -371,7 +371,7 @@
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
                         <h1 class="h3 mb-0 text-gray-800">Extratos</h1>
                         <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                                class="fas fa-download fa-sm text-white-50"></i> Baixar Planilha</a>
+                                class="fas fa-download fa-sm text-white-50"></i> Baixar Extratos</a>
                     </div>
 
                     <!-- Content Row -->
@@ -383,13 +383,14 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                BRB</div>
+                                            <div class="text-xl font-weight-bold text-primary text-uppercase mb-1">
+                                                BRB - R$ 260,00 </div>
+
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">Uber<br>R$ 100,00</br></div>
                                             <br><div class="h5 mb-0 font-weight-bold text-gray-800">Sheein<br>R$ 160,00</br></div></br>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                                            <i class="fas fa-calendar fa-2x text-gray-300"> </i>
                                         </div>
                                     </div>
                                 </div>
@@ -402,8 +403,8 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                Nubank</div>
+                                            <div class="text-md font-weight-bold text-success text-uppercase mb-1">
+                                                Nu - R$ 400,50</div>
                                                 <div class="h5 mb-0 font-weight-bold text-gray-800">Ifood<br>R$ 230,00</br></div>
                                                 <br><div class="h5 mb-0 font-weight-bold text-gray-800">Enel<br>R$ 170,50</br></div></br>
                                         </div>
@@ -421,20 +422,20 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Itaú
+                                            <div class="text-md font-weight-bold text-info text-uppercase mb-1">Itaú - R$ 271,40
                                             </div>
                                             <div class="row no-gutters align-items-center">
                                                 <div class="col-auto">
                                                   <div class="h5 mb-0 font-weight-bold text-gray-800">Boleto Pago<br>R$ 90,50</br></div>
                                                   <br><div class="h5 mb-0 font-weight-bold text-gray-800">Pix<br>R$ 190,90</br></div></br>
                                                 </div>
-                                                <div class="col">
+                                                <!--  <div class="col">
                                                     <div class="progress progress-sm mr-2">
                                                         <div class="progress-bar bg-info" role="progressbar"
                                                             style="width: 50%" aria-valuenow="50" aria-valuemin="0"
                                                             aria-valuemax="100"></div>
                                                     </div>
-                                                </div>
+                                                </div>-->
                                             </div>
                                         </div>
                                         <div class="col-auto">
@@ -451,8 +452,8 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                                Banco Do Brasil</div>
+                                            <div class="text-md font-weight-bold text-warning text-uppercase mb-1">
+                                                BB - R$ 850,00</div>
                                                 <div class="h5 mb-0 font-weight-bold text-gray-800">Pix<br>R$ 300</br></div>
                                                 <br><div class="h5 mb-0 font-weight-bold text-gray-800">Pix<br>R$ 550,00</br></div></br>
                                         </div>
@@ -475,7 +476,7 @@
                             <!-- Project Card Example -->
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-primary">Vencimento Cartões</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">Fatura dos Próximos Cartões</h6>
                                 </div>
                                 <div class="card-body">
                                     <!-- <h4 class="small font-weight-bold">Migração de servidor <span
@@ -485,28 +486,48 @@
                                             aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>-->
                                     <h4 class="small font-weight-bold">Banco do Brasil <span
-                                            class="float-right">07/05/2023</span></h4>
+                                            class="float-right"> Vencimento - 07/05/2023</span></h4>
+                                            <h4 class="small font-weight-bold"><font color="#00ff55"> Disponível </font> <span
+                                                    class="float-right"> <font color="#00ff55"> R$ 1150,00 </font></span></h4>
+                                            <h4 class="small font-weight-bold"><font color="#FF0000"> Gastos </font> <span
+                                                            class="float-right"> <font color="#FF0000"> R$ 850,00 </font></span></h4>
                                     <div class="progress mb-4">
                                         <div class="progress-bar bg-warning" role="progressbar" style="width: 100%"
-                                            aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                                            aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">< -R$0 Ajustar Limite R$2000 -></div>
                                     </div>
+
+
+
                                     <h4 class="small font-weight-bold">BRB<span
-                                            class="float-right">21/04/2023</span></h4>
+                                            class="float-right"> Vencimento - 21/04/2023</span></h4>
+                                            <h4 class="small font-weight-bold"><font color="#00ff55"> Disponível </font> <span
+                                                    class="float-right"> <font color="#00ff55"> R$ 740,00 </font></span></h4>
+                                            <h4 class="small font-weight-bold"><font color="#FF0000"> Gastos </font> <span
+                                                            class="float-right"> <font color="#FF0000"> R$ 260,00 </font></span></h4>
                                     <div class="progress mb-4">
-                                        <div class="progress-bar" role="progressbar" style="width: 49%"
-                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" style="width:50%"
+                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">< -R$0 Ajustar Limite R$1000 -></div>
+
                                     </div>
                                     <h4 class="small font-weight-bold">Itaú <span
-                                            class="float-right">02/05/2023</span></h4>
+                                            class="float-right">Vencimento - 02/05/2023</span></h4>
+                                            <h4 class="small font-weight-bold"><font color="#00ff55"> Disponível </font> <span
+                                                    class="float-right"> <font color="#00ff55"> R$ 1228,60 </font></span></h4>
+                                            <h4 class="small font-weight-bold"><font color="#FF0000"> Gastos </font> <span
+                                                            class="float-right"> <font color="#FF0000"> R$ 271,40 </font></span></h4>
                                     <div class="progress mb-4">
-                                        <div class="progress-bar bg-info" role="progressbar" style="width: 85%"
-                                            aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar bg-info" role="progressbar" style="width: 75%"
+                                            aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">< -R$0 Ajustar Limite R$1500 -></div>
                                     </div>
                                     <h4 class="small font-weight-bold">Nubank <span
-                                            class="float-right">10/04/2023</span></h4>
+                                            class="float-right">Vencimento - 10/04/2023</span></h4>
+                                            <h4 class="small font-weight-bold"><font color="#00ff55"> Disponível </font> <span
+                                                    class="float-right"> <font color="#00ff55"> R$ 4549,50 </font></span></h4>
+                                            <h4 class="small font-weight-bold"><font color="#FF0000"> Gastos </font> <span
+                                                            class="float-right"> <font color="#FF0000"> 450,50 </font></span></h4>
                                     <div class="progress">
-                                        <div class="progress-bar bg-success" role="progressbar" style="width: 10%"
-                                            aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar bg-success" role="progressbar" style="width: 100%"
+                                            aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">< -R$0 Ajustar Limite R$5000 -></div>
                                     </div>
                                 </div>
                             </div>
