--- a/index.html
+++ b/index.html
@@ -488,12 +488,12 @@
                                     <h4 class="small font-weight-bold">BB <span
                                             class="float-right"> Vencimento - 07/05/2023</span></h4>
                                             <h4 class="small font-weight-bold"><font color="#00ff55"> Disponível </font> <span
-                                                    class="float-right"> <font color="#00ff55"> R$ 1150,00 </font></span></h4>
-                                            <h4 class="small font-weight-bold"><font color="#FF0000"> Gastos </font> <span
+                                                    class="float-right"> <font color="#00ff55"> R$ 1.150,00 </font></span></h4>
+                                            <h4 class="small font-weight-bold"><font color="#FF0000"> Gasto </font> <span
                                                             class="float-right"> <font color="#FF0000"> R$ 850,00 </font></span></h4>
                                     <div class="progress mb-4">
                                         <div class="progress-bar bg-warning" role="progressbar" style="width: 100%"
-                                            aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">< -R$0 Ajustar Limite R$2000 -></div>
+                                            aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">< -R$0 Ajustar Limite R$ 2.000,00 -></div>
                                     </div>
 
 
@@ -502,32 +502,32 @@
                                             class="float-right"> Vencimento - 21/04/2023</span></h4>
                                             <h4 class="small font-weight-bold"><font color="#00ff55"> Disponível </font> <span
                                                     class="float-right"> <font color="#00ff55"> R$ 740,00 </font></span></h4>
-                                            <h4 class="small font-weight-bold"><font color="#FF0000"> Gastos </font> <span
+                                            <h4 class="small font-weight-bold"><font color="#FF0000"> Gasto </font> <span
                                                             class="float-right"> <font color="#FF0000"> R$ 260,00 </font></span></h4>
                                     <div class="progress mb-4">
                                         <div class="progress-bar" role="progressbar" style="width:50%"
-                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">< -R$0 Ajustar Limite R$1000 -></div>
+                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">< -R$0 Ajustar Limite R$ 1.000,00 -></div>
 
                                     </div>
                                     <h4 class="small font-weight-bold">Itaú <span
                                             class="float-right">Vencimento - 02/05/2023</span></h4>
                                             <h4 class="small font-weight-bold"><font color="#00ff55"> Disponível </font> <span
-                                                    class="float-right"> <font color="#00ff55"> R$ 1228,60 </font></span></h4>
-                                            <h4 class="small font-weight-bold"><font color="#FF0000"> Gastos </font> <span
+                                                    class="float-right"> <font color="#00ff55"> R$ 1.228,60 </font></span></h4>
+                                            <h4 class="small font-weight-bold"><font color="#FF0000"> Gasto </font> <span
                                                             class="float-right"> <font color="#FF0000"> R$ 271,40 </font></span></h4>
                                     <div class="progress mb-4">
                                         <div class="progress-bar bg-info" role="progressbar" style="width: 75%"
-                                            aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">< -R$0 Ajustar Limite R$1500 -></div>
+                                            aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">< -R$0 Ajustar Limite R$ 1.500,00 -></div>
                                     </div>
                                     <h4 class="small font-weight-bold">Nubank <span
                                             class="float-right">Vencimento - 10/04/2023</span></h4>
                                             <h4 class="small font-weight-bold"><font color="#00ff55"> Disponível </font> <span
-                                                    class="float-right"> <font color="#00ff55"> R$ 4549,50 </font></span></h4>
-                                            <h4 class="small font-weight-bold"><font color="#FF0000"> Gastos </font> <span
+                                                    class="float-right"> <font color="#00ff55"> R$ 4.549,50 </font></span></h4>
+                                            <h4 class="small font-weight-bold"><font color="#FF0000"> Gasto </font> <span
                                                             class="float-right"> <font color="#FF0000"> 450,50 </font></span></h4>
                                     <div class="progress">
                                         <div class="progress-bar bg-success" role="progressbar" style="width: 100%"
-                                            aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">< -R$0 Ajustar Limite R$5000 -></div>
+                                            aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">< -R$0 Ajustar Limite R$ 5.000,00 -></div>
                                     </div>
                                 </div>
                             </div>
