--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                                             class="float-right"> Vencimento - 07/05/2023</span></h4>
                                             <h4 class="small font-weight-bold"><font color="#00ff55"> Disponível </font> <span
                                                     class="float-right"> <font color="#00ff55"> R$ 1.150,00 </font></span></h4>
-                                            <h4 class="small font-weight-bold"><font color="#FF0000"> Gasto </font> <span
+                                            <h4 class="small font-weight-bold"><font color="#FF0000"> Gastos </font> <span
                                                             class="float-right"> <font color="#FF0000"> R$ 850,00 </font></span></h4>
                                     <div class="progress mb-4">
                                         <div class="progress-bar bg-warning" role="progressbar" style="width: 100%"
